--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-dark text-light">
+  <body class="bg-light text-white">
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
