--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-light text-white">
+  <body class="bg-dark text-light">
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
@@ -38,7 +38,7 @@
       </nav>
     </header>
 
-    <main class="container-fluid bg-secondary text-center">
+    <main class="container-fluid bg-info text-center">
       <div>
         <h1>Welcome</h1>
         <p>Login to play</p>
