--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
 
-    <main class="container-fluid bg-info text-center">
+    <main class="container-fluid bg-light text-secondary text-center">
       <div>
         <h1>Welcome</h1>
         <p>Login to play</p>
