--- a/play.html
+++ b/play.html
@@ -38,7 +38,7 @@
       </nav>
     </header>
 
-    <main class="bg-secondary">
+    <main class="bg-light">
       <div class="players">
         Player:
         <span class="player-name">Mystery player</span>
