--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
     <footer class="bg-dark text-dark text-muted">
       <div class="container-fluid">
-        <span class="text-reset">Lily Nahoopii</span>
+        <span class="text-reset">CS260, Lily Nahoopii</span>
         <a
           class="text-reset"
           href="https://github.com/lylst3r/simon.git"
