--- a/scores.html
+++ b/scores.html
@@ -47,26 +47,7 @@
             <th>Date</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>lylst3r</td>
-            <td>34</td>
-            <td>May 20, 2021</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>lylst3r</td>
-            <td>29</td>
-            <td>June 2, 2021</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>lylst3r</td>
-            <td>7</td>
-            <td>July 3, 2020</td>
-          </tr>
-        </tbody>
+        <tbody id="scores"></tbody>
       </table>
     </main>
 
@@ -80,5 +61,7 @@
         >
       </div>
     </footer>
+    
+    <script src="scores.js"></script>
   </body>
 </html>
