--- a/play.html
+++ b/play.html
@@ -51,8 +51,8 @@
           <button id="blue" class="game-button button-bottom-right" onclick="game.pressButton(this)"></button>
           <div class="controls center">
             <div class="game-name">Simon<sup>&reg;</sup></div>
-            <div class="score center">--</div>
-            <button class="btn btn-primary">Reset</button>
+            <div id="score" class="score center">--</div>
+            <button class="btn btn-primary" onclick="game.reset()">Reset</button>
           </div>
         </div>
       </div>
